@startuml

title __PATH_SUM_112's Class Diagram__\n

  namespace cn.shui.order {
    namespace path_sum_112 {
      class cn.shui.order.path_sum_112.Solution {
          {static} + main()
          {static} - hasPathSum()
      }
    }
  }
  

  namespace cn.shui.order {
    namespace path_sum_112 {
      class cn.shui.order.path_sum_112.Solution.TreeNode {
          ~ val : int
          ~ TreeNode()
      }
    }
  }
  

  cn.shui.order.path_sum_112.Solution +-down- cn.shui.order.path_sum_112.Solution.TreeNode
  cn.shui.order.path_sum_112.Solution.TreeNode o-- cn.shui.order.path_sum_112.Solution.TreeNode : left
  cn.shui.order.path_sum_112.Solution.TreeNode o-- cn.shui.order.path_sum_112.Solution.TreeNode : right


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
